@@ -1,0 +1,2 @@
+/* Despite the old base symbol version, x32 does not have a sysctl
+   function.  */
