@@ -1,1 +1,0 @@
-# X32 doesn't support sysctl.
